--- a/app/src/main/res/layout/fragment_miner.xml
+++ b/app/src/main/res/layout/fragment_miner.xml
@@ -1,93 +1,116 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.example.romain.home.MinerFragment"
-    android:gravity="center">
+    android:layout_height="match_parent" tools:context="com.example.romain.home.MinerFragment">
 
 
 
     <!-- TODO: Update blank fragment layout -->
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="More >"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:onClick="displayMoreFragment" />
+
     <LinearLayout
+        android:id="@+id/verticallyt"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="10dp"
-        android:id="@+id/hasratelyt">
+        android:layout_centerInParent="true">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Hash Rate"
-            android:id="@+id/hashratetitle"
-            android:layout_margin="10dp"
-            android:layout_gravity="center" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_margin="10dp"
+            android:id="@+id/hasratelyt"
+            android:layout_centerInParent="true">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="--"
-                android:id="@+id/hashrate"
-                android:layout_margin="10dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Hash Rate"
+                android:id="@+id/hashratetitle"
+                android:layout_margin="10dp"
+                android:layout_gravity="center" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="--"
+                    android:id="@+id/hashrate"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="GH/s"
+                    android:id="@+id/textView6"
+                    android:layout_margin="10dp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/errorratelyt"
+            android:layout_toRightOf="@+id/hasratelyt"
+            android:layout_margin="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="GH/s"
-                android:id="@+id/textView6"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Error Rate"
+                android:id="@+id/textView9"
                 android:layout_margin="10dp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="--"
+                    android:id="@+id/errorrate"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="%"
+                    android:id="@+id/textView11"
+                    android:layout_margin="10dp"
+                    android:singleLine="true" />
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/errorratelyt"
-        android:layout_alignTop="@+id/hasratelyt"
-        android:layout_toRightOf="@+id/hasratelyt">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Error Rate"
-            android:id="@+id/textView9"
-            android:layout_margin="10dp" />
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="--"
-                android:id="@+id/errorrate"
-                android:layout_margin="10dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="%"
-                android:id="@+id/textView11"
-                android:layout_margin="10dp"
-                android:singleLine="true" />
-        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
