--- a/app/src/main/res/values/refs.xml
+++ b/app/src/main/res/values/refs.xml
@@ -11,4 +11,13 @@
     <item name="fragment_item" type="layout">@layout/fragment_item_list</item>
     <item name="fragment_item2" type="layout">@layout/fragment_item_list2</item>
 
+    <!--
+    Layout alias to replace the single-pane version of the layout with a
+    two-pane version on Large screens.
+
+    For more on layout aliases, see:
+    http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
+    -->
+    <item name="fragment_item3" type="layout">@layout/fragment_item_list3</item>
+
 </resources>
