--- a/app/src/main/res/values-large/refs.xml
+++ b/app/src/main/res/values-large/refs.xml
@@ -20,4 +20,13 @@
     -->
     <item name="fragment_item3" type="layout">@layout/fragment_item_grid3</item>
 
+    <!--
+    Layout alias to replace the single-pane version of the layout with a
+    two-pane version on Large screens.
+
+    For more on layout aliases, see:
+    http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
+    -->
+    <item name="fragment_actions" type="layout">@layout/fragment_actions_grid</item>
+
 </resources>
