--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,33 +1,40 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <SwitchPreference
-        android:key="example_switch"
-        android:title="@string/pref_title_social_recommendations"
-        android:summary="@string/pref_description_social_recommendations"
-        android:defaultValue="true" />
-
     <!-- NOTE: EditTextPreference accepts EditText attributes. -->
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
-    <EditTextPreference
-        android:key="example_text"
-        android:title="@string/pref_title_display_name"
-        android:defaultValue="@string/pref_default_display_name"
-        android:selectAllOnFocus="true"
-        android:inputType="textCapWords"
-        android:capitalize="words"
-        android:singleLine="true"
-        android:maxLines="1" />
+    <PreferenceCategory android:title="@string/serversettingcategorytitle">
+
+        <EditTextPreference
+            android:defaultValue="@string/localserverip"
+            android:key="local_server_ip"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:title="@string/localserveriptitle" />
+
+        <EditTextPreference
+            android:defaultValue="@string/serverremoteip"
+            android:key="server_remote_ip"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:title="@string/serverremoteiptitle" />
+
+        <EditTextPreference
+            android:defaultValue="@string/userdefault"
+            android:key="username"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:title="@string/usernametitle" />
+
+        <EditTextPreference
+            android:defaultValue="@string/passworddefault"
+            android:key="password"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:title="@string/passwordtitle" />
+    </PreferenceCategory>
 
     <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
          dismiss it. -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-    <ListPreference
-        android:key="example_list"
-        android:title="@string/pref_title_add_friends_to_messages"
-        android:defaultValue="-1"
-        android:entries="@array/pref_example_list_titles"
-        android:entryValues="@array/pref_example_list_values"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null" />
 
 </PreferenceScreen>
